---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 2020-07-29
  Changes:
    - Added event filters to improve performance.
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 2020-01-21
  Features:
    - Now compatible with Factorio 0.18.
---------------------------------------------------------------------------------------------------
Version: 0.17.10
Date: 2020-01-02
  Features:
    - Added option to use X,Y as the top left position for deconstruction and upgrades.
---------------------------------------------------------------------------------------------------
Version: 0.17.9
Date: 2019-08-26
  Bugfixes:
    - Now supports on_entity_cloned.
---------------------------------------------------------------------------------------------------
Version: 0.17.7
Date: 2019-07-03
  Bugfixes:
    - Will not deploy blueprints more than 1000000 tiles from the start position.
---------------------------------------------------------------------------------------------------
Version: 0.17.6
Date: 2019-06-05
  Bugfixes:
    - Set icon_size for deployer chest.
---------------------------------------------------------------------------------------------------
Version: 0.17.5
Date: 2019-06-05
  Bugfixes:
    - script_raised_built now sets entity.
---------------------------------------------------------------------------------------------------
Version: 0.17.4
Date: 2019-04-18
  Bugfixes:
    - Changed on_robot_built_entity to script_raised_built for mod compatibility.
---------------------------------------------------------------------------------------------------
Version: 0.17.3
Date: 2019-03-22
  Bugfixes:
    - Handles script_raised_revive correctly.
---------------------------------------------------------------------------------------------------
Version: 0.17.2
Date: 2019-03-21
  Bugfixes:
    - Now works in fog of war.